@@ -10,7 +10,9 @@ Satoshi Nakagawa <artension@gmail.com>
 * Thanks To
 
 Yohei Endo			# application icon
+Dustin Voss			# AsyncSocket
 Eloy Duran			# RubyCocoa developer, a patch for bundling RubyCocoa.framework
+					# and SACrashReporter
 Fujimoto Hisa       # RubyCocoa creator
 Laurent Sansonetti  # RubyCocoa developer, many requests and suggestions
 Josh Goebel			# CocoaSheet, many improvements of code and UIs
