@@ -1,0 +1,1 @@
+require File.expand_path('../lib/SACrashReporter', __FILE__)
